--- a/plugin.xml
+++ b/plugin.xml
@@ -4,115 +4,32 @@
 	<name>GitHub Integration</name>
 	<description>This plugin provides integration with GitHub via their API. This plugin is intended to be a bridge used by other plugins to communicate with GitHub services.  It introduces record types for GitHub Repositories and Issues.</description>
 	<author>Webgroup Media, LLC.</author>
-	<version>0.1.0</version>
+	<version>0.1.2</version>
 	<link>http://www.cerbweb.com/book/latest/plugins/wgm.github.html</link>
 	<image>plugin.png</image>
- 
- 	<!-- Requirements -->
+
+	<!-- Requirements -->
 
 	<requires>
-		<app_version min="7.2" max="7.2.99" />
-		<php_extension name="oauth" />
+		<app_version min="7.3" max="7.3.99" />
 	</requires>
- 
+
 	<!-- Plugin Dependencies -->
 	
 	<dependencies>
-		<require plugin_id="cerberusweb.core" version="7.0.0" />
+		<require plugin_id="cerberusweb.core" version="7.3.0" />
 	</dependencies>
-
+	
 	<!-- Patches -->
 	
 	<patches>
-		<patch version="6.0.0" revision="1" file="patches/6.0.0.php" />
+		<patch version="7.3.0" revision="1" file="patches/7.3.0.php" />
 	</patches>
-	
-	<!-- Exported Classes -->
-	
-	<class_loader>
-		<file path="api/dao/github_issue.php">
-			<class name="Context_GitHubIssue" />
-			<class name="DAO_GitHubIssue" />
-			<class name="Model_GitHubIssue" />
-			<class name="SearchFields_GitHubIssue" />
-			<class name="View_GitHubIssue" />
-		</file>
-	
-		<file path="api/dao/github_repository.php">
-			<class name="Context_GitHubRepository" />
-			<class name="DAO_GitHubRepository" />
-			<class name="Model_GitHubRepository" />
-			<class name="SearchFields_GitHubRepository" />
-			<class name="View_GitHubRepository" />
-		</file>
-	</class_loader>
 
 	<!-- Extensions -->
- 
+
 	<extensions>
 
-		<!-- Contexts -->
-
-		<extension point="devblocks.context">
-			<id>cerberusweb.contexts.github.issue</id>
-			<name>GitHub Issue</name>
-			<class>
-				<file>api/dao/github_issue.php</file>
-				<name>Context_GitHubIssue</name>
-			</class>
-			<params>
-				<param key="names">
-					<value>
-						<data key="github issue" value="singular" />
-						<data key="github issues" value="plural" />
-					</value>
-				</param>
-				<param key="alias" value="github_issue" />
-				<param key="dao_class" value="DAO_GitHubIssue" />
-				<param key="view_class" value="View_GitHubIssue" />
-				<param key="options">
-					<value>
-						<!--<data key="create" />-->
-						<data key="find" />
-						<!--<data key="snippets" />-->
-						<data key="workspace" />
-						<data key="va_variable" />
-					</value>
-				</param>
-			</params>
-		</extension>		
-
-		<extension point="devblocks.context">
-			<id>cerberusweb.contexts.github.repository</id>
-			<name>GitHub Repository</name>
-			<class>
-				<file>api/dao/github_repository.php</file>
-				<name>Context_GitHubRepository</name>
-			</class>
-			<params>
-				<param key="names">
-					<value>
-						<data key="github repository" value="singular" />
-						<data key="github repositories" value="plural" />
-						<data key="repository" value="singular short" />
-						<data key="repositories" value="plural short" />
-					</value>
-				</param>
-				<param key="alias" value="github_repository" />
-				<param key="dao_class" value="DAO_GitHubRepository" />
-				<param key="view_class" value="View_GitHubRepository" />
-				<param key="options">
-					<value>
-						<data key="create" />
-						<data key="find" />
-						<!--<data key="snippets" />-->
-						<data key="workspace" />
-						<data key="va_variable" />
-					</value>
-				</param>
-			</params>
-		</extension>		
-		
 		<!-- Setup Page Menu Item -->
 
 		<extension point="cerberusweb.ui.page.menu.item">
@@ -124,7 +41,7 @@
 			</class>
 			<params>
 				<param key="page_id" value="core.page.configuration" />
-				<param key="menu_id" value="core.setup.menu.plugins" />
+				<param key="menu_id" value="core.setup.menu.services" />
 			</params>
 		</extension>
 		
@@ -143,5 +60,24 @@
 			</params>
 		</extension>
 		
-    </extensions> 
+		<!-- Service Providers -->
+		
+		<extension point="cerb.service.provider">
+			<id>wgm.github.service.provider</id>
+			<name>GitHub</name>
+			<class>
+				<file>api/App.php</file>
+				<name>ServiceProvider_GitHub</name>
+			</class>
+			<params>
+				<param key="contexts">
+					<value>
+						<data key="cerberusweb.contexts.app" />
+						<data key="cerberusweb.contexts.worker" />
+					</value>
+				</param>
+			</params>
+		</extension>
+		
+	</extensions> 
 </plugin>
