--- a/plugin.xml
+++ b/plugin.xml
@@ -4,20 +4,20 @@
 	<name>GitHub Integration</name>
 	<description>This plugin provides integration with GitHub via their API. This plugin is intended to be a bridge used by other plugins to communicate with GitHub services.  It introduces record types for GitHub Repositories and Issues.</description>
 	<author>Webgroup Media, LLC.</author>
-	<version>0.3.0</version>
+	<version>0.4.0</version>
 	<link>http://www.cerbweb.com/book/latest/plugins/wgm.github.html</link>
 	<image>plugin.png</image>
 
 	<!-- Requirements -->
 
 	<requires>
-		<app_version min="8.0" max="8.0.99" />
+		<app_version min="8.1" max="8.1.99" />
 	</requires>
 
 	<!-- Plugin Dependencies -->
 	
 	<dependencies>
-		<require plugin_id="cerberusweb.core" version="8.0.0" />
+		<require plugin_id="cerberusweb.core" version="8.1.0" />
 	</dependencies>
 	
 	<!-- Patches -->
@@ -48,7 +48,7 @@
 		<!-- Setup Page Sections -->
 		
 		<extension point="cerberusweb.ui.page.section">
-			<id>wgmgithub.setup.twitter</id>
+			<id>wgmgithub.setup.github</id>
 			<name>Setup Page GitHub Section</name>
 			<class>
 				<file>api/App.php</file>
